<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dabkick.developer3.login.ForgotPassword">

    <ImageView
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/x_delete_photo_v70" />


    <TextView
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textSize="20dp" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/send_you_new_one"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp">

        <!--email name-->
        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/hintLightGray"
            android:textSize="@dimen/editFieldTextSize" />

        <!--separator line-->
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/fieldUnderLineColor" />

    </RelativeLayout>

    <TextView
        android:id="@+id/sendBtn"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/lightBlueColor"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/maskView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5"
        android:visibility="invisible"
        >
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/blackBoxWaiting"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@android:color/black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dabby_red_circle_v70"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            />

        <TextView
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="138dp"
            android:text="@string/just_a_moment"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            android:gravity="center"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/blackBoxOK"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@android:color/black">

        <TextView
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/password_reset"
            android:textColor="@android:color/white"
            android:gravity="center"
            />

        <TextView
            android:layout_width="180dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/password_reset_description"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/okBtn"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:text="@string/OK"
            android:textStyle="bold"
            android:textColor="@color/lightBlueColor"
            android:gravity="center"
            />

    </RelativeLayout>

</RelativeLayout>
